src/docker/java-scala-dockerized-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: java-scala-dockerized
  name: java-scala-dockerized
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: java-scala-dockerized
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f compose.yaml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/java-scala-dockerized-default: "true"
        io.kompose.service: java-scala-dockerized
    spec:
      containers:
        - image: java-scala-dockerized
          name: java-scala-dockerized
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
